[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/death_menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/Acme-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://joe_rumbi.theme" type="Theme" id=3]
[ext_resource path="res://scenes/ui/death.ogv" type="VideoStream" id=4]
[ext_resource path="res://scripts/death_video.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 54
font_data = ExtResource( 2 )

[node name="DeathMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VideoPlayer" type="VideoPlayer" parent="AspectRatioContainer"]
margin_left = 212.0
margin_right = 812.0
margin_bottom = 600.0
stream = ExtResource( 4 )
autoplay = true
script = ExtResource( 5 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -103.0
margin_top = -183.0
margin_right = 103.0
margin_bottom = -69.0
custom_fonts/font = SubResource( 1 )
text = "You Died!"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.5
margin_top = -66.0
margin_right = 130.5
margin_bottom = 66.0
theme = ExtResource( 3 )

[node name="RestartButton" type="Button" parent="VBoxContainer"]
margin_right = 261.0
margin_bottom = 34.0
focus_neighbour_top = NodePath("../ExitGameButton")
text = "Restart"

[node name="BackToMainMenuButton" type="Button" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 261.0
margin_bottom = 72.0
focus_neighbour_bottom = NodePath("../RestartButton")
text = "Back to Main Menu"

[node name="ExitGameButton" type="Button" parent="VBoxContainer"]
margin_top = 76.0
margin_right = 261.0
margin_bottom = 110.0
focus_neighbour_bottom = NodePath("../RestartButton")
text = "Exit Game"

[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/BackToMainMenuButton" to="." method="_on_BackToMainMenuButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitGameButton" to="." method="_on_ExitGameButton_pressed"]
